# serializer version: 1
# name: test_sensors[sensor.aqualogic_air_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_air_temperature',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Air Temperature',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'AquaLogic Air Temperature',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_air_temp',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_air_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'AquaLogic Air Temperature',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_air_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.5',
  })
# ---
# name: test_sensors[sensor.aqualogic_pool_chlorinator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_pool_chlorinator',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Pool Chlorinator',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gauge',
    'original_name': 'AquaLogic Pool Chlorinator',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_pool_chlorinator',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_pool_chlorinator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Pool Chlorinator',
      'icon': 'mdi:gauge',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_pool_chlorinator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50',
  })
# ---
# name: test_sensors[sensor.aqualogic_pool_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_pool_temperature',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Pool Temperature',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:oil-temperature',
    'original_name': 'AquaLogic Pool Temperature',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_pool_temp',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_pool_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'AquaLogic Pool Temperature',
      'icon': 'mdi:oil-temperature',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_pool_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '27.8',
  })
# ---
# name: test_sensors[sensor.aqualogic_pump_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_pump_power',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Pump Power',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.POWER: 'power'>,
    'original_icon': None,
    'original_name': 'AquaLogic Pump Power',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_pump_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_pump_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power',
      'friendly_name': 'AquaLogic Pump Power',
      'unit_of_measurement': <UnitOfPower.WATT: 'W'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_pump_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '850',
  })
# ---
# name: test_sensors[sensor.aqualogic_pump_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_pump_speed',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Pump Speed',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:speedometer',
    'original_name': 'AquaLogic Pump Speed',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_pump_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_pump_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Pump Speed',
      'icon': 'mdi:speedometer',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_pump_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '60',
  })
# ---
# name: test_sensors[sensor.aqualogic_salt_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_salt_level',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Salt Level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gauge',
    'original_name': 'AquaLogic Salt Level',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_salt_level',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_salt_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Salt Level',
      'icon': 'mdi:gauge',
      'unit_of_measurement': 'g/L',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_salt_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3.3',
  })
# ---
# name: test_sensors[sensor.aqualogic_spa_chlorinator-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_spa_chlorinator',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Spa Chlorinator',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:gauge',
    'original_name': 'AquaLogic Spa Chlorinator',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_spa_chlorinator',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_spa_chlorinator-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Spa Chlorinator',
      'icon': 'mdi:gauge',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_spa_chlorinator',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_sensors[sensor.aqualogic_spa_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_spa_temperature',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Spa Temperature',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': 'mdi:oil-temperature',
    'original_name': 'AquaLogic Spa Temperature',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_spa_temp',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_spa_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'AquaLogic Spa Temperature',
      'icon': 'mdi:oil-temperature',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_spa_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '38.0',
  })
# ---
# name: test_sensors[sensor.aqualogic_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.aqualogic_status',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'AquaLogic Status',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:alert',
    'original_name': 'AquaLogic Status',
    'platform': 'aqualogic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test_aqualogic_entry_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensors[sensor.aqualogic_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AquaLogic Status',
      'icon': 'mdi:alert',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.aqualogic_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'OK',
  })
# ---
